fix scrollbar

--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -25,7 +25,7 @@ $navbar-bg-color: #343a40;
 $clear: rgba(255, 255, 255, 0);
 // opacity colors
 $scrollbar-thumb-shadow-gray: rgba(0, 0, 0, .5);
-$scrollbar-track-shadow-color: rgba(0, 0, 0, .45);
+$scrollbar-track-shadow-color: rgba(0, 0, 0, .4);
 
 // urls
 // img urls
